fix minor layout problem

--- a/src/app/service5/service5.component.scss
+++ b/src/app/service5/service5.component.scss
@@ -138,7 +138,7 @@ table:hover {
 
 .container-fluid {
     margin-left: 1%;
-    margin-right: 0;
+    margin-right: 1%;
     padding: auto;
     width: auto;
 }
