--- a/src/app/useraccount/useraccount.component.scss
+++ b/src/app/useraccount/useraccount.component.scss
@@ -127,7 +127,7 @@ a:visited {
     margin-left: 1%;
     margin-right: 0;
     padding: auto;
-    width: 2000px;
+    width: 1900px;
 }
 // .col
 // {
